[CCAP-639] Handle Tika returning a special mime type for older versions of Office products